# ci-cd-release-risk-scanner

./: .dockerignore  .gitignore  Makefile  POST_CAPTION.md  README.md  docker-compose.yml  pyproject.toml
docs/: CASE_STUDY.md
docs/github-actions/: ci.yml
infra/docker/: Dockerfile
infra/k8s/: deployment.yaml  service.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
reports/: change-advisory-blocked.md  change-advisory-safe.json  supply-chain-blocked.md
scripts/: smoke_api.py
src/app/: main.py  metrics.py
src/release_risk_scanner/: __init__.py  cli.py  io.py  models.py  scanner.py
tests/: test_api.py  test_cli.py  test_scanner.py
tests/fixtures/: change_advisory_blocked.json  change_advisory_safe.json  healthy_evidence.json  risky_release.json  rollback_evidence.json  safe_release.json  supply_chain_blocked.json  supply_chain_safe.json
