[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-release-risk-scanner"
version = "0.1.0"
description = "Release risk scanner for CI/CD deploy gates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "prometheus-client==0.21.1",
  "pydantic==2.10.4",
  "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "ruff==0.8.4",
]

[project.scripts]
release-risk = "release_risk_scanner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

